main 사이트맵 추가, 메인 배너 애니메이션 추가
-메인 페이지 메인 배너 3개 2초마다 움직일 수 있도록 구현
-사이트맵 제작
-js로 사이트맵 메뉴 버튼 생성

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="header_ui">
           <div class="mall">
             <img src="./main/images/icon-cart.svg" alt="mall" />
-            <a href="#">&nbsp;동아제약 공식몰&nbsp;</a>
+            <a href="https://dmall.co.kr/product/index.html">&nbsp;동아제약 공식몰&nbsp;</a>
           </div>
           <!--mall-->
           <p>&nbsp;| &nbsp;</p>
@@ -156,15 +156,106 @@
           </div>
         </div>
       </header>
+   <!-- site map -->
+   <div class="site_map">
+    <div class="site_map_upper">
+      <h1 class="site_map_logo">
+        <a href="./index.html">
+          <img src="./main/images/main-logo.jpg" alt="logo" />
+        </a>
+      </h1>
+      <div class="site_map_header_ui">
+        <div class="site_map_close_btn">
+          <a href="#">
+            <img src="./main/images/icon-close.svg" alt="site_close_btn" />
+          </a>
+        </div>
+      </div><!--site-map-upper-->
+    </div><!--site-map-->
+    <nav class="site_map_nav">
+      <ul class="site_map_dep1_ul">
+        <li class="site_map_dep1_li">
+          <a href="./about/about.html">기업정보
+            <ul class="site_map_dep2_ul">
+              <li class="site_map_dep2_li">
+                <a href="./about/about.html">기업소개</a>
+              </li>
+              <li class="site_map_dep2_li">
+                <a href="./about/about.html">회사연혁</a>
+              </li>
+              <li class="site_map_dep2_li">
+                <a href="./about/about.html">위치안내</a>
+              </li>
+            </ul>
+          </a>
+        </li>
+        <li class="site_map_dep1_li">
+          <a href="#">제품정보
+            <ul class="site_map_dep2_ul">
+              <li class="site_map_dep2_li">
+                <a href="./product/product.html">제품검색</a>
+              </li>
+              <li class="site_map_dep2_li"><a href="./product/product.html">제품소식 </a></li>
+              <li class="site_map_dep2_li"><a href="./product/product.html">약국찾기 </a></li>
+            </ul>
+          </a>
+        </li>
+        <li class="site_map_dep1_li">
+          <a href="#">연구개발
+            <ul class="site_map_dep2_ul">
+              <li class="site_map_dep2_li">
+                <a href="#">연구센터소개</a>
+              </li>
+              <li class="site_map_dep2_li">
+                <a href="#">R&D 비전</a>
+              </li>
+              <li class="site_map_dep2_li">
+                <a href="#">주요연구성과</a>
+              </li>
+            </ul>
+          </a>
+        </li>
+        <li class="site_map_dep1_li">
+          <a href="#">윤리경영
+            <ul class="site_map_dep2_ul">
+              <li class="site_map_dep2_li">
+                <a href="#">윤리강령</a>
+              </li>
+              <li class="site_map_dep2_li"><a href="#">상담/FAQ</a></li>
+              <li class="site_map_dep2_li"><a href="#">인재채용</a></li>
+            </ul>
+          </a>
+        </li>
+        <li class="site_map_dep1_li">
+          <a href="#">홍보센터
+            <ul class="site_map_dep2_ul">
+              <li class="site_map_dep2_li">
+                <a href="#">공지 & 뉴스</a>
+              </li>
+              <li class="site_map_dep2_li">
+                <a href="#">홍보영상</a>
+              </li>
+              <li class="site_map_dep2_li">
+                <a href="#">인재채용</a>
+              </li>
+            </ul>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <!-- 사이트맵 -->
+
 
       <div class="contents">
         <div class="main_bn">
           <div class="main_bn_title">
-            <h3>건강한 생활 속에<br>
-              동아제약이 함께합니다</h3>
+            <h3>건강한 생활 속에<h3>
+            <h2>동아제약이 함께합니다</h2>
+            <p></p>
           </div>
         </div>
-<!-- 메인배너 2개 추가해야함 -->
+
 
 <div class="about">
   <div class="width_1520 width_mobile">
