sub) 기업 소개 mobile/pc 버전 footer 추가
기업 소개 mobile/pc 버전 footer 추가

--- a/about/about.html
+++ b/about/about.html
@@ -366,6 +366,49 @@
     </div>
     <!--contact-->
   </main>
+  <footer class="footer">
+    <div class="footer_left">
+      <div class="footer_left_upper">
+        <a href="./index.html">
+          <img src="../main/images/f-logo.jpg" alt="f-logo" />
+        </a>
+        <div class="footer_left_info_1">
+          <p><a href="#">개인정보방침</a></p>
+          <p><a href="#">이용약관</a></p>
+        </div>
+      </div>
+
+      <div class="footer_left_info_2">
+        <p>
+          서울시 동대문구 천호대로64 | 대표번호 82-02-920-8112 | 팩스 82-02-920-8708 | E-mail : donga@naver.com <br>
+          사업자 등록 번호 : 204-86-40118 | ⓒ2013.Dong-A All rights reserved.
+        </p>
+      </div>
+    </div>
+    <div class="footer_right">
+      <div class="family_site">
+        <p>Family Site</p>
+        <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 1.25L7.5 7.75L14 1.25" stroke="black" stroke-width="1.3px" />
+        </svg>
+      </div>
+      <div class="sns_btn">
+        <a href="https://www.naver.com/">
+          <img src="../main/images/icon-naver.svg" alt="naver_btn" />
+        </a>
+        <a href="https://www.facebook.com/">
+          <img src="../main/images/icon-facebook.svg" alt="facebook_btn" />
+        </a>
+        <a href="https://www.instagram.com/">
+          <img src="../main/images/icon-instagram.svg" alt="instagram_btn" />
+        </a>
+        <a href="https://www.youtube.com/">
+          <img src="../main/images/icon-youtube.svg" alt="youtube_btn" />
+        </a>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
