main 메인 배너 오류 수정, open gragh 추가
-main 메인 배너 오류 수정 및 css 추가
-pc버전 사이트맵 수정
-open gragh 추가

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="og:url" content="" />
   <!-- 썸네일 주소 찾기 -->
   <!-- 웹페이지 썸네일 (권장크기:1200 X 630)-->
-  <meta name="og:image" content="favicon/favicon.ico">
+  <meta name="og:image" content="./thumbnail.jpg" />
   <!-- 파비콘 -->
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon.ico" />
 
@@ -220,12 +220,11 @@
   <div class="contents">
     <div class="main_bn">
       <div class="main_bn_title">
-        <h2>건강한 생활 속에<h2>
-            <h3>동아제약이 함께합니다</h3>
-            <p></p>
+        <h2>언제나 함께 </h2>
+        <h3>건강한 생활 속에서<br>동아제약이 함께합니다</h3>
+        <p>공식몰 바로가기</p>
       </div>
     </div>
-
 
     <div class="about">
       <div class="container">
@@ -276,9 +275,12 @@
           <!--product1-->
         </div>
         <!--product-contents-->
-        <div class="main_btn">
-          <a href="./product/product.html">제품정보&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a>
+        <div class="btn-box">
+          <div class="main_btn">
+            <a href="./product/product.html">제품정보&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a>
+          </div>
         </div>
+        <!--btn-box-->
       </div>
       <!--container-->
     </div>
@@ -359,50 +361,51 @@
       <!--container-->
     </div>
     <!--recruit-->
+  </div>
+  <!--contents-->
 
-
-    <footer class="footer">
-      <div class="footer_left">
-        <div class="footer_left_upper">
-          <a href="./index.html">
-            <img src="./main/images/f-logo.jpg" alt="f-logo" />
-          </a>
-          <div class="footer_left_info_1">
-            <p><a href="#">개인정보방침</a></p>
-            <p><a href="#">이용약관</a></p>
-          </div>
-        </div>
-
-        <div class="footer_left_info_2">
-          <p>
-            서울시 동대문구 천호대로64 | 대표번호 82-02-920-8112 | 팩스 82-02-920-8708 | E-mail : donga@naver.com <br>
-            사업자 등록 번호 : 204-86-40118 | ⓒ2013.Dong-A All rights reserved.
-          </p>
+  <footer class="footer">
+    <div class="footer_left">
+      <div class="footer_left_upper">
+        <a href="./index.html">
+          <img src="./main/images/f-logo.jpg" alt="f-logo" />
+        </a>
+        <div class="footer_left_info_1">
+          <p><a href="#">개인정보방침</a></p>
+          <p><a href="#">이용약관</a></p>
         </div>
       </div>
-      <div class="footer_right">
-        <div class="family_site">
-          <p>Family Site</p>
-          <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1 1.25L7.5 7.75L14 1.25" stroke="black" stroke-width="1.3px" />
-          </svg>
-        </div>
-        <div class="sns_btn">
-          <a href="https://www.naver.com/">
-            <img src="./main/images/icon-naver.svg" alt="naver_btn" />
-          </a>
-          <a href="https://www.facebook.com/">
-            <img src="./main/images/icon-facebook.svg" alt="facebook_btn" />
-          </a>
-          <a href="https://www.instagram.com/">
-            <img src="./main/images/icon-instagram.svg" alt="instagram_btn" />
-          </a>
-          <a href="https://www.youtube.com/">
-            <img src="./main/images/icon-youtube.svg" alt="youtube_btn" />
-          </a>
-        </div>
+
+      <div class="footer_left_info_2">
+        <p>
+          서울시 동대문구 천호대로64 | 대표번호 82-02-920-8112 | 팩스 82-02-920-8708 | E-mail : donga@naver.com <br>
+          사업자 등록 번호 : 204-86-40118 | ⓒ2013.Dong-A All rights reserved.
+        </p>
       </div>
-    </footer>
+    </div>
+    <div class="footer_right">
+      <div class="family_site">
+        <p>Family Site</p>
+        <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 1.25L7.5 7.75L14 1.25" stroke="black" stroke-width="1.3px" />
+        </svg>
+      </div>
+      <div class="sns_btn">
+        <a href="https://www.naver.com/">
+          <img src="./main/images/icon-naver.svg" alt="naver_btn" />
+        </a>
+        <a href="https://www.facebook.com/">
+          <img src="./main/images/icon-facebook.svg" alt="facebook_btn" />
+        </a>
+        <a href="https://www.instagram.com/">
+          <img src="./main/images/icon-instagram.svg" alt="instagram_btn" />
+        </a>
+        <a href="https://www.youtube.com/">
+          <img src="./main/images/icon-youtube.svg" alt="youtube_btn" />
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
