open graph 추가 및 수정본

--- a/about/about.html
+++ b/about/about.html
@@ -114,7 +114,7 @@
   <div class="site_map">
     <div class="site_map_upper">
       <h1 class="site_map_logo">
-        <a href="./index.html">
+        <a href="../index.html">
           <img src="../main/images/main-logo.jpg" alt="logo" />
         </a>
       </h1>
@@ -149,13 +149,13 @@
           <a href="#">제품정보
             <ul class="site_map_dep2_ul">
               <li class="site_map_dep2_li">
-                <a href="./product/product.html">제품검색</a>
+                <a href="../product/product.html">제품검색</a>
               </li>
               <li class="site_map_dep2_li">
-                <a href="./product/product.html">제품소식 </a>
+                <a href="../product/product.html">제품소식 </a>
               </li>
               <li class="site_map_dep2_li">
-                <a href="./product/product.html">약국찾기 </a>
+                <a href="../product/product.html">약국찾기 </a>
               </li>
             </ul>
           </a>
