--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="og:description" content="동아제약 공식 홈페이지입니다." />
   <meta name="og:type" content="website" />
   <!-- 웹페이지 주소 -->
-  <meta name="og:url" content="" />
+  <meta name="og:url" content="https://myeongakim7.github.io/Dong-A-Pharmaceutical-Co.-Ltd.-Renewal/" />
   <!-- 썸네일 주소 찾기 -->
   <!-- 웹페이지 썸네일 (권장크기:1200 X 630)-->
   <meta name="og:image" content="./thumbnail.jpg" />
