sub) 서브 배너 크기 조정

--- a/README.html
+++ b/README.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>동아제약 리뉴얼 홈페이지</h1>
-    <br />
-    피그마 시안 주소:
-    <br />
-    <hr />
-    <h2>22/12/06</h2>
-    <ul>
-      <li>리뉴얼 전에 피그마 스타일가이드 작성</li>
-      <li>피그마 시안 구상</li>
-    </ul>
-    <h2>22/12/07</h2>
-    <ul>
-      <li>메인페이지 헤더의 메인메뉴 호버시 서브메뉴 드롭다운 효과</li>
-      <li>서브메뉴 호버시 배경화면 색 부여</li>
-    </ul>
-    <h2>22/12/08</h2>
-    <ul>
-      <li>메인페이지 메인 배너 3개 2초마다 움직일 수 있도록 구현</li>
-      <li>사이트맵 제작</li>
-      <li>js로 사이트맵 메뉴 버튼 생성</li>
-      <li>서브페이지 추가) 제품소개</li>
-      <li>서브페이지 추가) 기업정보</li>
-      <li>구글 맵 추가</li>
 
-      <h2>22/12/09</h2>
-      <ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<p>
+  <h1>동아제약 리뉴얼 홈페이지</h1>
+  <br />
+  <p>피그마 시안
+    주소:https://www.figma.com/file/fbgRvPUbv7aLLrgMi9ujpi/%EB%8F%99%EC%95%84%EC%A0%9C%EC%95%BD-%EC%8B%9C%EC%95%88?node-id=0%3A1&t=Lw8WlG13yCJTkXBx-1
+  </p>
+  <br />
+  <p>대표이미지</p>
+  <img src="./thumbnail.jpg" alt="thumbnail-img">
+  <hr />
+  <h2>22/12/06</h2>
+  <ul>
+    <li>리뉴얼 전 피그마 스타일가이드 작성</li>
+    <li>피그마 시안 구상</li>
+  </ul>
+  <h2>22/12/07</h2>
+  <ul>
+    <li>main 헤더의 메인메뉴 호버시 서브메뉴 드롭다운 효과</li>
+    <li>서브메뉴 호버시 배경화면 색 부여</li>
+  </ul>
+  <h2>22/12/08</h2>
+  <ul>
+    <li>main 배너 3개 2초마다 움직일 수 있도록 구현</li>
+    <li>main pc 사이트맵 제작</li>
+    <li>js로 사이트맵 메뉴 버튼 생성</li>
+    <li>서브페이지 추가) 제품소개</li>
+    <li>서브페이지 추가) 기업정보</li>
+    <li>구글 맵 추가</li>
+</ul>
+    <h2>22/12/09</h2>
+    <ul>
       <li>파비콘 생성/추가</li>
       <li>서브페이지) 제품소개 - 항목 선택 시 해당 항목만 볼 수 있도록 구현</li>
+      <li>반응형 홈페이지 구현</li>
+      <li>main 모바일 css 버전 추가 / .container로 규칙적으로 화면 너비 잡아주기 </li>
+      <li>main 인재채용 - css로 div박스-이미지 순서 변경</li>
+      <li>서브페이지) 기업소개 mobile 추가</li>
+      <li>서브페이지) 기업소개 mobile/pc 버전 footer 추가 </li>
+      <li>main 메인 배너 오류수정 및 css 추가</li>
+      <li>main pc버전 사이트맵 수정</li>
+      <li>open gragh 추가</li>
     </ul>
     <h2>23/01/27</h2>
     <ul>
       <li>서브페이지) 서브배너 크기조정</li>
       <li>main 제품정보 - 제품마다 링크 추가</li>
       </ul>
-    <h2>2023/02/14</h2>
-    <ul>
-      <li>메인 배너 오류 해결 및 pc/mobile css 수정</li>
+    </body>
 
-    </ul>
-  </body>
 </html>
