main 제품 정보 - 이전/다음 버튼 클릭 시 이미지 넘기기

--- a/index.html
+++ b/index.html
@@ -254,41 +254,84 @@
           <h1>Product</h1>
         </div>
         <div class="product-contents">
-          <div class="pre-btn" id="pro-btn">
-            <a href="#"><i class="fa-solid fa-chevron-left fa-2x"></i></a>
+          <button id="pre-btn">
+            <i class="fa-solid fa-chevron-left fa-3x"></i>
+          </button>
+          <!-- <a href="#"><i class="fa-solid fa-chevron-left fa-2x"></i></a> -->
+
+          <div class="product-parents">
+            <div class="product-box">
+              <div class="product1 show">
+                <a href="./product/product.html">
+                  <div class="product-img">
+                    <img src="./main/images/product1.svg" alt="product1">
+                  </div>
+                  <!--pro1-image-->
+                  <h3>Beverage</h3>
+                  <p>매일을 새롭게 에너지 UP 해 줄<br>
+                    대한민국 피로회복제 </p>
+                </a>
+              </div>
+              <!--product1-->
+              <div class="product1 show">
+                <a href="./product/product.html">
+                  <div class="product-img">
+                    <img src="./main/images/product2.svg" alt="product2"></div>
+                  <h3>Health functional food </h3>
+                  <p>꼭 필요한 영양분만 담은<br>
+                    맞춤형 헬스 케어 </p>
+                </a>
+              </div>
+              <!--product1-->
+              <div class="product1 show">
+                <a href="./product/product.html">
+                  <div class="product-img">
+                    <img src="./main/images/product3.svg" alt="product3"></div>
+                  <h3>Feminine hygiene products</h3>
+                  <p>여성의 삶을 건강하고 아름답게 <br>
+                    라이프 스테이지별 맞춤</p>
+                </a>
+              </div>
+              <!--product1-->
+              <div class="product2">
+                <a href="./product/product.html">
+                  <div class="product-img">
+                    <img src="./main/images/product4.svg" alt="product4"></div>
+                  <h3>Health functional food </h3>
+                  <p>독일 프리미엄 건강기능식품<br>
+                    영양과 정상적인 면역 기능을 위한 선택</p>
+                </a>
+              </div>
+              <!--product1-->
+              <div class="product2">
+                <a href="./product/product.html">
+                  <div class="product-img">
+                    <img src="./main/images/product5.svg" alt="product5"></div>
+                  <h3>Oral care products</h3>
+                  <p>부드러운 비움, 산뜻한 채움 <br>
+                    치아, 잇몸 케어로 입 속을 튼튼하게 가그린 </p>
+                </a>
+              </div>
+              <!--product1-->
+              <div class="product2">
+                <a href="./product/product.html">
+                  <div class="product-img">
+                    <img src="./main/images/product6.svg" alt="product6"></div>
+                  <h3>Hypertrophic scar & Keloids</h3>
+                  <p>울긋불긋 여드름 흉터 짙어지기 전에 <br>
+                    관리하는 국내 출시 흉터 치료제 </p>
+                </a>
+              </div>
+              <!--product1-->
+            </div>
+            <!--product-box-->
           </div>
-          <div class="product1">
-            <a href="./product/product.html">
-              <img src="./main/images/product1.svg" alt="product1">
-              <h3>Beverage</h3>
-              <p>매일을 새롭게 에너지 UP 해 줄<br>
-                대한민국 피로회복제 </p>
-            </a>
-          </div>
-          <!--product1-->
-          <div class="product1">
-            <a href="./product/product.html">
-              <img src="./main/images/product2.svg" alt="product2">
-              <h3>Health functional food </h3>
-              <p>꼭 필요한 영양분만 담은<br>
-                맞춤형 헬스 케어 </p>
-            </a>
-          </div>
-          <!--product1-->
-          <div class="product1">
-            <a href="./product/product.html">
-              <img src="./main/images/product3.svg" alt="product3">
-              <h3>Feminine hygiene products</h3>
-              <p>여성의 삶을 건강하고 아름답게 <br>
-                라이프 스테이지별 맞춤</p>
-            </a>
-          </div>
-          <!--product1-->
-          <!-- 제품 3개 더 추가하기  <> 이전,다음 버튼 !!-->
-          <!-- 1.사진모으기 2.제목, 설명추가 / hidden  -->
-          <div class="next-btn" id="pro-btn">
-            <a href="#"><i class="fa-solid fa-chevron-right fa-2x"></i></a>
-          </div>
+          <!--product-parents-->
+          <button id="next-btn">
+            <i class="fa-solid fa-chevron-right fa-3x"></i>
+          </button>
+          <!-- <a href="#"><i class="fa-solid fa-chevron-right fa-2x"></i></a> -->
+
         </div>
         <!--product-contents-->
         <div class="btn-box">
