sub) 제품 소개 - 카테고리 선택 시 오류 부분 수정 및 모바일 버전 구현
-main 모바일 버전 수정
-서브페이지) 제품소개 - 카테고리 선택 시 오류난 부분 수정 및 제품 추가
 -서브페이지) 제품소개 - 모바일 버전 구현 (수정중)

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <div class="main_bn_title">
         <h2>언제나 함께 </h2>
         <h3>건강한 생활 속에서<br>동아제약이 함께합니다</h3>
-        <p><a href="#">공식몰 바로가기</a></p>
+        <p><a href="https://dmall.co.kr/product/index.html">공식몰 바로가기</a></p>
       </div>
     </div>
 
@@ -266,7 +266,7 @@
                   <div class="product-img">
                     <img src="./main/images/product1.svg" alt="product1">
                   </div>
-                  <!--pro1-image-->
+                  <!--product-img-->
                   <h3>Beverage</h3>
                   <p>매일을 새롭게 에너지 UP 해 줄<br>
                     대한민국 피로회복제 </p>
@@ -330,13 +330,13 @@
           <button id="next-btn">
             <i class="fa-solid fa-chevron-right fa-3x"></i>
           </button>
-          <!-- <a href="#"><i class="fa-solid fa-chevron-right fa-2x"></i></a> -->
+
 
         </div>
         <!--product-contents-->
         <div class="btn-box">
           <div class="main_btn">
-            <a href="./product/product.html">제품정보&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a>
+            <a href="product/product.html">제품정보&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a>
           </div>
         </div>
         <!--btn-box-->
