--- a/README.html
+++ b/README.html
@@ -58,9 +58,14 @@
 
   <h2>23/02/15</h2>
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>main 제품정보 - 이전/다음 버튼 클릭 시 이미지 넘기기</li>
+  </ul>
+
+  <h2>23/02/16</h2>
+  <ul>
+    <li>main 모바일 버전 수정</li>
+    <li>서브페이지) 제품소개 - 카테고리 선택 시 오류난 부분 수정 및 제품 추가</li>
+    <li>서브페이지) 제품소개 - 모바일 버전 구현 </li>
   </ul>
   </body>
 
