제품소개 - 한 페이지 당 제품 9개로 설정, 숫자 클릭 시 다음 페이지로 넘어가도록 구현
제품 소개 - 한 페이지 당 제품 9개로 설정, 숫자 클릭 시 다음 페이지로 넘어가도록 구현

--- a/product/product.html
+++ b/product/product.html
@@ -223,7 +223,7 @@
       <div class="search-box">
         <div class="search-box2">
           <h2>제품검색</h2>
-          <form action="search"></form>
+          <form action="search"> </form>
           <input type="search" id="search" placeholder="&nbsp;검색어를 입력해주세요">
           <a href="#"><img src="./images/icon-search.svg" alt="search"></a>
         </div>
@@ -388,10 +388,8 @@
       <div class="numbers">
         <button class="leftMax">〈〈</button>
         <button class="left">〈</button>
-        <p class="pcP">1</p>
-        <p class="pcP">2</p>
-        <p class="mobileP">3</p>
-        <p class="mobileP">4</p>
+        <p class="page">1</p>
+        <p class="page">2</p>
         <button class="right">〉</button>
         <button class="rightMax">〉〉</button>
       </div>
