--- a/README.html
+++ b/README.html
@@ -65,7 +65,13 @@
   <ul>
     <li>main 모바일 버전 수정</li>
     <li>서브페이지) 제품소개 - 카테고리 선택 시 오류난 부분 수정 및 제품 추가</li>
-    <li>서브페이지) 제품소개 - 모바일 버전 구현 </li>
+    <li>서브페이지) 제품소개 - 모바일 버전 구현 (수정중)</li>
+  </ul>
+
+  <h2>23/02/21</h2>
+  <ul>
+    <li></li>
+    <li></li>
   </ul>
   </body>
 
