구글 번역 api 커스텀

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
               />&nbsp;&nbsp;EN</a
             >
           </div> -->
+
           <div class="img_lang">
             <a href="#">
               <img src="./main/images/icon-lang-white.svg" alt="lang" />
@@ -167,6 +168,7 @@
           </div>
           <!--img_lang-->
           <div id="google_translate_element" class="hd_lang"></div>
+
           <div class="m_btn">
             <a href="#">
               <img
@@ -184,7 +186,7 @@
               pageLanguage: "ko",
               includedLanguages:
                 "ko,zh-CN,zh-TW,ja,vi,th,tl,km,my,mn,ru,en,fr,ar",
-              layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+              //layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
               autoDisplay: false,
             },
             "google_translate_element"
